--- a/Staff.html
+++ b/Staff.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   <!-- Nav Section Start -->
   <div id="nav-placeholder"></div>
   <!-- Nav Section End -->
@@ -27,135 +28,170 @@
     </div>
   </section>
 
-  <!-- Main Content -->
-  <div class="container my-5">
-    <div class="accordion" id="staffAccordion">
+  <!-- Staff Overview -->
+  <section class="container my-5">
+    <div class="row text-center">
 
-      <!-- Section 1 -->
-      <div class="card mb-3">
-        <div class="card-header" id="headingOne">
-          <h2 class="mb-0">
-            <button class="btn btn-link text-primary" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Head Coach and Founder
-            </button>
-          </h2>
-        </div>
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#staffAccordion">
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-8">
-                <p class="lead">My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life. 
-                  Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. 
-                  I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, 
-                  and never received in my youth. e.g. development over winning.</p>
-                <p class="lead">I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. 
-                  I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.</p>
-                <p class="lead">See you on the fields! Coach Nick.</p>
-              </div>
-              <div class="col-md-4 text-center">
-                <img src="img/nick.jpg" class="img-fluid rounded-circle" style="max-width: 200px;">
-              </div>
-            </div>
-          </div>
+      <div class="col-md-6 mb-4">
+        <div class="card h-100 p-4">
+          <img src="img/nick.jpg" class="rounded-circle mx-auto mb-3" style="max-width:140px;">
+          <h4>Nick Barnett-Moore</h4>
+          <p class="text-muted">Founder & Head Coach</p>
+          <a href="#nick-profile" class="btn btn-outline-primary btn-sm">View Profile</a>
         </div>
       </div>
 
-      <!-- Section 2 -->
-      <div class="card mb-3">
-        <div class="card-header" id="headingTwo">
-          <h2 class="mb-0">
-            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Playing History (2000 – 2011)
-            </button>
-          </h2>
-        </div>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#staffAccordion">
-          <div class="card-body">
-            <ul class="lead">
-              <li>Representative football (now NPL) from U/13’s.</li>
-              <li>U/13’s – U/15’s – Hawkesbury City FC.</li>
-              <li>U/16’s – Mount Druitt Rangers (half season) | Granville Rage (now Western Rage).</li>
-              <li>U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</li>
-              <li>(2005) Team 'tour' to England: Training at Chelsea & Liverpool academies. Friendlies with Staines, Rochdale, Reading.</li>
-              <li>(2010) Six-week England visit, trained with semi-pro clubs in Southwest London.</li>
-              <li>(2011) Gap year: Reserve match experience and trial with EFL League 2 club (unsuccessful).</li>
-              <li>(2000 – 2005) Private coaching: Coverer-style curriculum (skills, turns, shooting, plyometrics).</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Section 3 -->
-      <div class="card mb-3">
-        <div class="card-header" id="headingThree">
-          <h2 class="mb-0">
-            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Teacher History
-            </button>
-          </h2>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#staffAccordion">
-          <div class="card-body">
-            <ul class="lead">
-              <li>(2007 – 2010) Learn to swim instructor. Former AUST Swim quals. 1.5 – 16-year-olds.</li>
-              <li>(2013-2016) University Lecturer & Tutor. Designed & delivered technical content to diverse cohorts.</li>
-              <li>(2022 – current) Kids football coach.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Section 4 -->
-      <div class="card mb-3">
-        <div class="card-header" id="headingFour">
-          <h2 class="mb-0">
-            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Qualifications
-            </button>
-          </h2>
-        </div>
-        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#staffAccordion">
-          <div class="card-body">
-            <ul class="lead">
-              <li>
-                <a href="./img/Barnett-Moore_WWCC_2022.pdf" target="_blank" rel="noopener noreferrer">
-              Working With Children Check
-              </a>
-              </li>
-            <li>
-              <a href="./img/Barnett-Moore_C-Licence_2025.JPG" target="_blank" rel="noopener noreferrer">
-              AFC C Licence
-            </a>
-            </li>
-            <li>
-              <a href="./img/Barnett-Moore_Barca_Qualification.pdf" target="_blank" rel="noopener noreferrer">
-              Barca Coach Academy: Introductory level (FC Barcelona)
-            </a>
-            </li>
-
-            </ul>
-          </div>
+      <div class="col-md-6 mb-4">
+        <div class="card h-100 p-4">
+          <img src="img/coach-placeholder.jpg" class="rounded-circle mx-auto mb-3" style="max-width:140px;">
+          <h4>Second Coach</h4>
+          <p class="text-muted">Academy Coach</p>
+          <a href="#coach2-profile" class="btn btn-outline-primary btn-sm">View Profile</a>
         </div>
       </div>
 
     </div>
+  </section>
+
+  <!-- Staff Profiles -->
+  <div class="container my-5">
+
+    <!-- Nick Profile -->
+    <section id="nick-profile" class="mb-5">
+      <h2 class="mb-4">Nick Barnett-Moore</h2>
+
+      <div class="accordion" id="nickAccordion">
+
+        <!-- Bio -->
+        <div class="card mb-3">
+          <div class="card-header">
+            <h2 class="mb-0">
+              <button class="btn btn-link text-primary" data-toggle="collapse" data-target="#nickBio">
+                Head Coach and Founder
+              </button>
+            </h2>
+          </div>
+          <div id="nickBio" class="collapse show" data-parent="#nickAccordion">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-8">
+                  <p class="lead">My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life.
+                    Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching.
+                    I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important,
+                    and never received in my youth. e.g. development over winning.</p>
+
+                  <p class="lead">I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there.
+                    I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.</p>
+
+                  <p class="lead">See you on the fields! Coach Nick.</p>
+                </div>
+                <div class="col-md-4 text-center">
+                  <img src="img/nick.jpg" class="img-fluid rounded-circle" style="max-width:200px;">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Playing History -->
+        <div class="card mb-3">
+          <div class="card-header">
+            <h2 class="mb-0">
+              <button class="btn btn-link text-primary collapsed" data-toggle="collapse" data-target="#nickPlaying">
+                Playing History (2000 – 2011)
+              </button>
+            </h2>
+          </div>
+          <div id="nickPlaying" class="collapse" data-parent="#nickAccordion">
+            <div class="card-body">
+              <ul class="lead">
+                <li>Representative football (now NPL) from U/13’s.</li>
+                <li>U/13’s – U/15’s – Hawkesbury City FC.</li>
+                <li>U/16’s – Mount Druitt Rangers | Granville Rage.</li>
+                <li>U/18’s – Granville Rage | Macarthur Rams.</li>
+                <li>(2005) England tour: Chelsea & Liverpool academies.</li>
+                <li>(2010) Six-week England training visit.</li>
+                <li>(2011) Trial with EFL League 2 club.</li>
+                <li>Private coaching (2000–2005).</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Teaching -->
+        <div class="card mb-3">
+          <div class="card-header">
+            <h2 class="mb-0">
+              <button class="btn btn-link text-primary collapsed" data-toggle="collapse" data-target="#nickTeaching">
+                Teaching History
+              </button>
+            </h2>
+          </div>
+          <div id="nickTeaching" class="collapse" data-parent="#nickAccordion">
+            <div class="card-body">
+              <ul class="lead">
+                <li>(2007 – 2010) Learn to swim instructor.</li>
+                <li>(2013 – 2016) University Lecturer & Tutor.</li>
+                <li>(2022 – current) Kids football coach.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Qualifications -->
+        <div class="card mb-3">
+          <div class="card-header">
+            <h2 class="mb-0">
+              <button class="btn btn-link text-primary collapsed" data-toggle="collapse" data-target="#nickQuals">
+                Qualifications
+              </button>
+            </h2>
+          </div>
+          <div id="nickQuals" class="collapse" data-parent="#nickAccordion">
+            <div class="card-body">
+              <ul class="lead">
+                <li><a href="./img/Barnett-Moore_WWCC_2022.pdf" target="_blank">Working With Children Check</a></li>
+                <li><a href="./img/Barnett-Moore_C-Licence_2025.JPG" target="_blank">AFC C Licence</a></li>
+                <li><a href="./img/Barnett-Moore_Barca_Qualification.pdf" target="_blank">Barca Coach Academy (FC Barcelona)</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Second Coach -->
+    <section id="coach2-profile">
+      <h2 class="mb-4">Second Coach</h2>
+
+      <div class="card">
+        <div class="card-body">
+          <p class="lead">
+            Profile details coming soon. This section mirrors the structure above and can include
+            biography, playing history, teaching background, and qualifications.
+          </p>
+        </div>
+      </div>
+    </section>
+
   </div>
 
   <!-- Footer Section Start -->
   <div id="foot-placeholder"></div>
   <!-- Footer Section End -->
 
-  <script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
-  <script type="text/javascript" src="js/popper.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/uikit.min.js"></script>
-  <script type="text/javascript" src="js/uikit-icons.min.js"></script>
+  <script src="js/jquery-3.6.4.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/uikit.min.js"></script>
+  <script src="js/uikit-icons.min.js"></script>
   <script>
     $(function () {
       $("#nav-placeholder").load("navbar.html");
       $("#foot-placeholder").load("footer.html");
     });
   </script>
-</body>
 
+</body>
 </html>
