--- a/Staff.html
+++ b/Staff.html
@@ -37,7 +37,7 @@
           <img src="img/nick.jpg" class="rounded-circle mx-auto mb-3" style="max-width:140px;">
           <h4>Nick Barnett-Moore</h4>
           <p class="text-muted">Founder & Head Coach</p>
-          <a href="nick.html" class="btn btn-outline-primary btn-sm">View Profile</a>
+          <a href="nick.html" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">View Profile</a>
         </div>
       </div>
 
