--- a/Staff.html
+++ b/Staff.html
@@ -34,7 +34,8 @@
 
       <div class="col-md-6 mb-4">
         <div class="card h-100 p-4">
-          <img src="img/nick.jpg" class="rounded-circle mx-auto mb-3" style="max-width:140px;">
+          <img src="img/nick.jpg" class="rounded-circle mx-auto mb-3" style="width:140px; height:120px; object-fit:cover;">
+
           <h4>Nick Barnett-Moore</h4>
           <p class="text-muted">Founder & Head Coach</p>
           <a href="nick.html" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary btn-sm">View Profile</a>
