--- a/Staff.html
+++ b/Staff.html
@@ -45,7 +45,7 @@
       <div class="col-md-6 mb-4">
         <div class="card h-100 p-4">
           <img src="img/Rod_profile.jpg" class="rounded-circle mx-auto mb-3" style="max-width:140px;">
-          <h4>SRod Wallace</h4>
+          <h4>Rod Wallace</h4>
           <p class="text-muted">Academy Coach</p>
           <a href="#coach2-profile" class="btn btn-outline-primary btn-sm">View Profile</a>
         </div>
