--- a/rod.html
+++ b/rod.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/uikit.min.css">
   <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-  <title>Nick Barnett-Moore | Foot and Ball Academy</title>
+  <title>Rod Wallace | Foot and Ball Academy</title>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
   <section id="intro" class="py-5">
     <div class="container">
       <div class="intro-box text-center">
-        <h1 class="mb-4">Nick Barnett-Moore</h1>
-        <p class="lead">Founder & Head Coach</p>
+        <h1 class="mb-4">Rod Wallace</h1>
+        <p class="lead">Academy Coach</p>
       </div>
     </div>
   </section>
@@ -46,21 +46,17 @@
             <div class="row">
               <div class="col-md-8">
                 <p class="lead">
-                  My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life.
-                  Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching.
-                  I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important,
-                  and never received in my youth. e.g. development over winning.
+TBC
                 </p>
 
                 <p class="lead">
-                  I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there.
-                  I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.
+                 TBC
                 </p>
 
-                <p class="lead">See you on the fields! Coach Nick.</p>
+                <p class="lead">See you on the fields! Coach Rod.</p>
               </div>
               <div class="col-md-4 text-center">
-                <img src="img/nick.jpg" class="img-fluid rounded-circle" style="max-width:200px;">
+                <img src="img/Rod_profile.jpg" class="img-fluid rounded-circle" style="max-width:200px;">
               </div>
             </div>
           </div>
@@ -72,21 +68,18 @@
         <div class="card-header">
           <h2 class="mb-0">
             <button class="btn btn-link text-primary collapsed" data-toggle="collapse" data-target="#playing">
-              Playing History (2000 – 2011)
+              Playing History 
             </button>
           </h2>
         </div>
         <div id="playing" class="collapse" data-parent="#nickAccordion">
           <div class="card-body">
             <ul class="lead">
-              <li>Representative football (now NPL) from U/13’s.</li>
-              <li>Hawkesbury City FC.</li>
-              <li>Mount Druitt Rangers | Granville Rage.</li>
-              <li>Macarthur Rams.</li>
-              <li>2005 England academy tour.</li>
-              <li>2010 UK semi-professional training.</li>
-              <li>2011 EFL League 2 trial.</li>
-              <li>Early private coaching (Coverciano-style).</li>
+              <li>team 1.</li>
+              <li>team 2.</li>
+              <li>team 3.</li>
+              <li>team 4.</li>
+              <li>team 5.</li>
             </ul>
           </div>
         </div>
@@ -104,9 +97,9 @@
         <div id="teaching" class="collapse" data-parent="#nickAccordion">
           <div class="card-body">
             <ul class="lead">
-              <li>Learn to swim instructor (2007–2010).</li>
-              <li>University Lecturer & Tutor (2013–2016).</li>
-              <li>Kids football coach (2022–current).</li>
+              <li>TAFE.</li>
+              <li>team 1, club 1.</li>
+              <li>team 2, club 2, etc.</li>
             </ul>
           </div>
         </div>
@@ -124,9 +117,8 @@
         <div id="quals" class="collapse" data-parent="#nickAccordion">
           <div class="card-body">
             <ul class="lead">
-              <li><a href="./img/Barnett-Moore_WWCC_2022.pdf" target="_blank">Working With Children Check</a></li>
-              <li><a href="./img/Barnett-Moore_C-Licence_2025.JPG" target="_blank">AFC C Licence</a></li>
-              <li><a href="./img/Barnett-Moore_Barca_Qualification.pdf" target="_blank">Barca Coach Academy (FC Barcelona)</a></li>
+              <li><a href="./img/Rod_WWCC.png" target="_blank">Working With Children Check</a></li>
+              <li><a href="./img/Rod_Clicence.jpg" target="_blank">AFC C Licence</a></li>
             </ul>
           </div>
         </div>
