--- a/footer.html
+++ b/footer.html
@@ -1,29 +1,48 @@
 <footer id="footer" class="py-3 text-center text-light" style="background-color: #111;">
   <div class="container" style="max-width:100%">
-    <div class="row" style="margin-bottom:10px">
+    
+    <div class="row mb-2">
       <div class="col">
         <h6 class="display-5 mb-0 text-light">
-          <img src="/img/android-chrome-512x512.png" class="img-fluid p-0" style="height: 40px;"> FOOT AND BALL ACADEMY
+          <img src="/img/android-chrome-512x512.png"
+               class="img-fluid p-0"
+               style="height:40px;"
+               alt="Foot and Ball Academy Logo">
+          FOOT AND BALL ACADEMY
         </h6>
       </div>
     </div>
-    <div class="row" style="margin-bottom:20px">
-      <div class="col-lg-3 align-self-center">
-        <i class="fa-solid fa-phone" style="width:30px"></i> +61 452 583 279<br>
+
+    <div class="row mb-3">
+
+      <!-- Phone -->
+      <div class="col-lg-4 align-self-center">
+        <a href="tel:+61452583279" style="color:#ccc; text-decoration:none;">
+          <i class="fa-solid fa-phone" style="width:30px;"></i>
+          +61&nbsp;452&nbsp;583&nbsp;279
+        </a>
       </div>
-      <div class="col-lg-3 align-self-center">
-        <i class="fa-solid fa-envelope" style="width:30px"></i> footandballacademy@outlook.com<br>
+
+      <!-- Email -->
+      <div class="col-lg-4 align-self-center">
+        <a href="mailto:footandballacademy@outlook.com" style="color:#ccc; text-decoration:none;">
+          <i class="fa-solid fa-envelope" style="width:30px;"></i>
+          footandballacademy@outlook.com
+        </a>
       </div>
-      <div class="col-lg-3 align-self-center">
-        <a href="https://www.instagram.com/footandballacademy/" style="color:#ccc;">
-          <i class="fab fa-instagram" style="width:30px"></i> @footandballacademy
-        </a><br>
+
+      <!-- Facebook -->
+      <div class="col-lg-4 align-self-center">
+        <a href="https://www.facebook.com/100090119914421"
+           target="_blank"
+           rel="noopener"
+           style="color:#ccc; text-decoration:none;">
+          <i class="fab fa-facebook-f" style="width:30px;"></i>
+          facebook.com/footandballacademy
+        </a>
       </div>
-      <div class="col-lg-3 align-self-center">
-        <a href="https://www.facebook.com/100090119914421" style="color:#ccc;">
-          <i class="fab fa-facebook-f" style="width:30px"></i> facebook.com/footandballacademy
-        </a><br>
-      </div>
+
     </div>
+
   </div>
 </footer>
