--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
       <!-- Phone -->
       <div class="col-lg-4 align-self-center">
         <a href="tel:+61452583279" style="color:#ccc; text-decoration:none;">
-          <i class="fa-solid fa-phone" style="width:30px;"></i>
+          <i class="fas fa-phone" style="width:30px;"></i>
           +61&nbsp;452&nbsp;583&nbsp;279
         </a>
       </div>
@@ -26,7 +26,7 @@
       <!-- Email -->
       <div class="col-lg-4 align-self-center">
         <a href="mailto:footandballacademy@outlook.com" style="color:#ccc; text-decoration:none;">
-          <i class="fa-solid fa-envelope" style="width:30px;"></i>
+          <i class="fas fa-envelope" style="width:30px;"></i>
           footandballacademy@outlook.com
         </a>
       </div>
