--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,17 @@
 <footer id="footer" class="py-3 text-center text-light" style="background-color: #111;">
   <div class="container" style="max-width:100%">
-    
-    <div class="row mb-2">
+
+    <!-- New horizontal logo -->
+    <div class="row mb-3">
       <div class="col">
-        <h6 class="display-5 mb-0 text-light">
-          <img src="/img/android-chrome-512x512.png"
-               class="img-fluid p-0"
-               style="height:40px;"
-               alt="Foot and Ball Academy Logo">
-          FOOT AND BALL ACADEMY
-        </h6>
+        <img src="/img/hor_white_nb.png"
+             class="img-fluid"
+             style="max-height:50px;"
+             alt="Foot and Ball Academy Logo">
       </div>
     </div>
 
+    <!-- Communication links -->
     <div class="row mb-3">
 
       <!-- Phone -->
