--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
         <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
           <p>Based in the Hawkesbury, NSW, we are a local private coaching business focused on long-term player development.</p>
-         <p> Currently, we are split into ‘two streams’ </p>
-          <p><strong>The Academy</strong>: Catering to players currently involved in Association/grassroots/non-competitive football 
-            i.e. (turning) 7 – 12 years old, who are eager for more and wish to secure a consistent, structured training environment, with greater challenges and demands.</p>
-          <p><strong>Youth space</strong>: Catering to players playing Association Div 1/NPL competitive football i.e. 
-            (turning) 13 and up, we are motivated to offer a coaching service that occupies some of the ‘space’ left behind by the former AYL.</p>
+         <p> Currently, we are split into: </p>
+          <p><strong>The Academy</strong>: For players 7 - 12 years old, currently involved in Association/grassroots/non-competitive football 
+            who are eager to experience a consistent, structured, training environment, with greater challenges and healither priorities.</p>
+          <p><strong>Youth space</strong>: For players turning 13 -15, playing Association Div 1/NPL competitive football motivated by ambition. This new coaching service looks to occupy some of the ‘space’ left behind by the former AYL.</p>
            <p>Think of us like a 'stepping stone' in your child's footballing journey.</p>
           <p> Check out more at <a href="help.html" target="_blank" rel="noopener noreferrer">Help! I'm New</a> or register for a trial below</p>
           <a href="register.html" class="btn btn-info btn-register">Register Now</a>
@@ -236,8 +235,8 @@
       <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
         <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
-          <p><a href="staff.html" target="_blank" rel="noopener noreferrer">Nick</a> has dedicated the pillars of Foot and Ball Academy to the intersection between the latest trends in youth development around the world and the cavities of his own playing experience as a youth player in Australia.</p>
-          <p>Currently holding his AFC C Licence, he always ensures all academy curriculums and session designs have a globally-sourced citation.</p>
+          <p><a href="staff.html" target="_blank" rel="noopener noreferrer">Nick</a> has dedicated the pillars of Foot and Ball Academy to the latest trends in global youth development as well as the cavities of his own playing experience as a youth player in Australia.</p>
+          <p>Currently holding his AFC C Licence, he always ensures all academy curriculums have a globally-sourced citation.</p>
           <p> He emphasises the importance of player development over the current obsession with performance-based outcomes.</p>
           <p> <em>“The Australian public has got it backwards. Your child’s championship trophy is in no way correlated with their individual growth or improvement as a player.”</em></p>
           <p>Check out more at <a href="OurPhilosophy.html" target="_blank" rel="noopener noreferrer">Coaching Philosophy</a> or <a href="academy.html" target="_blank" rel="noopener noreferrer">Academy Phenomena.</a></p>
